Update fonts and re-apply them

--- a/fonts/stylesheet.css
+++ b/fonts/stylesheet.css
@@ -1,7 +1,7 @@
 @font-face {
-    font-family: 'Heading Now Trial 04';
-    src: url('HeadingNowTrial-04Regular.woff2') format('woff2'),
-        url('HeadingNowTrial-04Regular.woff') format('woff');
+    font-family: 'Ferdinand';
+    src: url('FerdinandRegular.woff2') format('woff2'),
+        url('FerdinandRegular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
