Modify <li> line height and bullet point icon

--- a/style.css
+++ b/style.css
@@ -98,10 +98,17 @@ h2 {
   font-size: 4rem;
 }
 
-p, li {
+p,
+li {
   font-size: 2rem;
   letter-spacing: 0.3rem;
   word-spacing: 0.3rem;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 a[href^="http"]::after,
@@ -120,7 +127,7 @@ body {
   line-height: 3rem;
 }
 
-h2 + p {
+h2+p {
   text-indent: 20px;
 }
 
@@ -132,7 +139,8 @@ a:visited {
   color: rgb(113, 69, 69);
 }
 
-a:hover, a:focus {
+a:hover,
+a:focus {
   color: rgb(137, 137, 137);
   text-decoration-line: none;
 }
@@ -145,3 +153,8 @@ a:active {
   color: black;
 }
 
+li {
+  list-style-position: inside;
+  list-style-type: square;
+  line-height: 4rem;
+}
